feat:integrate auth middleware
